2008-12-06  Alper KANAT  <alperkanat@raptiye.org>

	* extra/captcha_test.py: removed..
	* templates/users/forgotten_password.html, media/css/style.css,
	users/forms.py, users/urls.py, users/views.py, templates/blog/sidebar.html,
	extra/mail.py: forgot my password and register links added to the login
	page.. users who don't remember their password can now retrieve it..
	* comments/views.py, extra/captcha.py: captcha class and its usage are
	slightly changed.
	* templates/blog/comments.html, templates/users/login.html,
	templates/users/profile.html, templates/users/registration.html: renamed the
	most used buttons..
	  
2008-12-04  Alper KANAT  <alperkanat@raptiye.org>

	* media/css/pygments.css, blog/templatetags/blog_filters.py,
	media/js/raptiye.js, templates/blog/detail.html,
	templates/blog/homepage.html, templates/feeds/latest_description.html,
	templates/frontpage/base.html: raptiye now supports code colorization..
	* TODO: new objectives are added..
	
2008-12-03  Alper KANAT  <alperkanat@raptiye.org>

	* blog/admin.py: deleted the code colorization parts since it drove me
	crazy.. i guess i'll try another (and easier) method..
	* contrib/twitter.py, extra/captcha.py: some py2.6 changes..

2008-11-29  Alper KANAT  <alperkanat@raptiye.org>

	* REQUIREMENTS: added BeautifulSoup as a dependency..
	* blog/admin.py, settings-example.py: BeautifulSoup is added but I'll
	continue from linux since mac os x is just a pain in the ass for
	development..
	* media/js/fckeditor.js: fckeditor optimization..

2008-11-25  Alper KANAT  <alperkanat@raptiye.org>

	* blog/templatetags/blog_filters.py, templates/blog/homepage.html: added a
	control for when to show the "show the rest of the entry" link..
	* templates/blog/detail.html, templates/feeds/latest_description.html:
	removed unnecessary linebreaksbr template tag due the change with
	fckeditor..

2008-11-22  Alper KANAT  <alperkanat@gmail.com>

	* media/js/jquery-tooltip/, media/js/raptiye.js,