@@ -7,7 +7,6 @@ TODO
 
 --- Code Enhancements ---
 
-	* base page optimization due to settings.py
 	* openid integration
 	* CSS improvement for blockquote's
 	* Fix problems occuring because of the non-occurence of http and www in web addresses of the comment authors.. (admin panel)
