@@ -110,9 +110,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 						<br>
 						&raquo; <a href="{% url logout_page %}?next={{ request.path }}" title="çıkış yapmak için tıklayın.." class="link">çıkış</a>
 					{% else %}
-						&raquo; <a href="{% url registration %}" title="raptiye'ye kaydolmak için tıklayın.." class="link">kaydol</a>
+						&raquo; <a href="{% url forgotten_password %}" title="raptiye hesabınızın şifresini hatırlamıyorsanız tıklayın.." class="link">şifremi unuttum</a>
 						<br>
-						&raquo; <a href="{% url forgot_password %}" title="raptiye hesabınızın şifresini hatırlamıyorsanız tıklayın.." class="link">şifremi unuttum</a>
+						&raquo; <a href="{% url registration %}" title="raptiye'ye kaydolmak için tıklayın.." class="link">kaydol</a>
 						<br>
 						&raquo; <a href="{% url login_page %}?next={{ request.path }}" title="raptiye hesabınızla giriş yapmak için tıklayın.." class="link">giriş</a>
 					{% endif %}
