@@ -50,6 +50,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<link rel="stylesheet" href="/media/js/jquery-tooltip/jquery.tooltip.css">
 		<script type="text/javascript" src="/media/js/jquery-tooltip/jquery.tooltip.pack.js"></script>
 		{# jQuery Tooltip End #}
+		{# OpenID Delegation Start #}
+		<link rel="openid.server" href="http://openid.claimid.com/server" />
+		<link rel="openid.delegate" href="http://openid.claimid.com/tunix" />
+		{# OpenID Delegation End #}
 		<title>{% block title %}{{ mainpage.title }} | {{ mainpage.subtitle }}{% endblock %}</title>
 	</head>
 	<body>
